BE/error/src/main/java/com/example/demo/filter/application/usecase/DeleteFilterUsecase.java
package com.example.demo.filter.application.usecase;

public interface DeleteFilterUsecase {
    void delete(Long filterId);
}
